--- a/config.json
+++ b/config.json
@@ -1,13 +1,12 @@
 {
   "inbounds": [
     {
-      "port": 8080,
-      "protocol": "vmess",
+      "port": 443,
+      "protocol": "vless",
       "settings": {
         "clients": [
           {
             "id": "a758c12e-6764-4eef-8d7c-3197dd60abc4",
-            "alterId": 6333
           }
         ]
       },
